[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parkpulse"
version = "0.1.0"
description = "Parking availability and capacity estimation from OSM and imagery"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopy>=2.4.0",
    "osmnx>=2.0.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "contextily>=1.4.0",
    "numpy>=1.24.0,<2",
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "streamlit>=1.28.0",
    "folium>=0.12.0",
    "streamlit-folium>=0.15.0",
    "mapclassify>=2.6.0",
    "matplotlib>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["parkpulse*"]
